# abcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml
.github/workflows/: ci.yaml
Cpp/: CMakeLists.txt
Cpp/cmake/: abcppConfig.cmake.in
Cpp/include/abcpp/: abc.hpp  abcpp.hpp  options.hpp
Cpp/src/: abc.cpp  reduction.cpp
Python/: CMakeLists.txt  pyproject.toml
Python/abcpp/: __init__.py  abc.py  summary.py
Python/src/: py_abcpp.cpp
R/: .Rbuildignore  DESCRIPTION  NAMESPACE
R/R/: abc.R  control.R  summary.R
R/inst/include/abcpp/: abc.hpp  abcpp_impl.hpp  options.hpp  result.hpp
R/inst/include/abcpp/detail/src/: abc.cpp  options.cpp  summary.cpp
R/man/: abc.Rd  control.Rd  summary.abcpp.Rd
R/src/: Makevars.win  wrapper.cpp
R/tests/: testthat.R
R/tests/testthat/: test-summary.R
dev/: test.R  test.py
docs/cpp/: abc_backend.md  linear_algebra.md  matrix.md  options.md  python_binding.md  r_binding.md  reduction.md  regression_adjustment.md  rejection.md  result.md  statistics.md
docs/python/: control.md
docs/r/: control.md
tests/Cpp/: test_core.cpp  test_linkingto_header.cpp
tests/Python/: conftest.py  test_abc.py  test_reduction.py  test_validation.py
tests/R/: testthat.R
tests/R/testthat/: helper-data.R  test-abc.R  test-linkingto.R  test-r-abc-alignment.R  test-reduction.R  test-validation.R
tools/: sync_cpp_sources.py
